--- a/html/inicio.html
+++ b/html/inicio.html
@@ -18,6 +18,9 @@
             <input type="password" placeholder="Digite seu e-mail" />
             <a href="/">Esqueci minha senha</a>
             <input type="submit" value="Acessar" class="btn" />
+            <script>
+                window.alert("Digite o emai")
+            </script>
         </form>
     </div>
     
