--- a/html/inicio.html
+++ b/html/inicio.html
@@ -19,7 +19,7 @@
             <a href="/">Esqueci minha senha</a>
             <input type="submit" value="Acessar" class="btn" />
             <script>
-                window.alert("Digite o emai")
+                window.alert("Digite o email")
             </script>
         </form>
     </div>
