--- a/html/login.html
+++ b/html/login.html
@@ -11,16 +11,19 @@
     <div class="page">
         <form method="POST" class="formLogin">
             <h1>Login</h1>
+            <img
+            src="https://www.educacao.pr.gov.br/sites/default/arquivos_restritos/files/styles/escala_1140_largura_/public/imagem/2022-03/brasao_cpmpr270.webp?itok=cCQQHhKV">
             <p>Digite os seus dados de acesso no campo abaixo.</p>
             <label for="email">E-mail</label>
             <input type="email" placeholder="Digite seu e-mail" autofocus="true" />
             <label for="password">Senha</label>
-            <input type="password" placeholder="Digite seu e-mail" />
-            <a href="/">Esqueci minha senha</a>
+            <input type="password" placeholder="Digite sua senha" />
+            <a href="tela2.html">Esqueci minha senha</a>
+            <a href="tela3.html">Criar uma conta</a>
             <input type="submit" value="Acessar" class="btn" />
-
         </form>
     </div>
     
 </body>
 </html>
+
