--- a/html/esqueci.html
+++ b/html/esqueci.html
@@ -12,7 +12,7 @@
 
     <title>Login</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="esqueci.css">
 
 </head>
 
