--- a/html/login.html
+++ b/html/login.html
@@ -18,8 +18,8 @@
             <input type="email" placeholder="Digite seu e-mail" autofocus="true" />
             <label for="password">Senha</label>
             <input type="password" placeholder="Digite sua senha" />
-            <a href="tela2.html">Esqueci minha senha</a>
-            <a href="tela3.html">Criar uma conta</a>
+            <a href="esqueci.html">Esqueci minha senha</a>
+            <a href="cadastro.html">Criar uma conta</a>
             <input type="submit" value="Acessar" class="btn" />
         </form>
     </div>
