--- a/html/login.html
+++ b/html/login.html
@@ -17,7 +17,7 @@
             <label for="email">E-mail</label>
             <input type="email" placeholder="Digite seu e-mail" autofocus="true" />
             <label for="password">Senha</label>
-            <input type="password" placeholder="Digite sua senha" />
+            <input type="password" placeholder="Digite sua senha" /> mokokokop
             <a href="esqueci.html">Esqueci minha senha</a>
             <a href="cadastro.html">Criar uma conta</a>
             <input type="submit" value="Acessar" class="btn" />
